--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Visa Homepage</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Welcome to my profile</h1>
+    <img src="./images/Wel.JPG" alt="Profile" width="900" height="400">
+    <h3>Group member</h3>
+    <ol>
+        <li><a href="./index.html">Visa</a></li>
+        <li><a href="#">member</a></li>
+        <li><a href="#">member</a></li>
+        <li><a href="#">member</a></li>
+    </ol>
+    <br>
+    <h2>About me </h2>
+    <img src="./images/Visa.jpg" alt="Visa">
+    <p><b>Name: </b>America Yanakom</p>
+    <p><b>Nickname: </b>Visa</p>
+    <p><b>My Steam: </b><a href="https://steamcommunity.com/id/amrca/">GIZMO</a></p>
+    <p>I'm new to html but will try to learn.</p>
+    <br>
+    <h2>Favourite</h2>
+    <p>I love <b>GIZMO</b>. GIZMO is a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlin</a> movie character.</p>
+    <img src="./images/Gizmo.gif" alt="GIZMOart">
+    <br>
+    <img src="./images/Gizmo_Background.jpg" alt="GIZMOart">
+    <br>
+    <h2>Hobby</h2>
+    <p>I love to play online games with my friends.</p>
+    <ul>
+        <li>Dota2</li>
+        <li>Counter-Strike: Global Offensive</li>
+        <li>Tom Clancy's Rainbow Six Siege</li>
+        <li>Valorant</li>
+        <li>Apex Legends</li>
+        <li>Fortnite</li>
+    </ul>
+    <p>When I'm with friends be like:</p>
+    <img src="https://i.pinimg.com/originals/1e/d9/a1/1ed9a1e15688e7142529a3256b564bae.gif" alt="Teletubbie">
+
 </body>
 </html>
