--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Visa Homepage</title>
 </head>
 <body>
-    <h1>Welcome to my profile</h1>
+    <h1><strong>Welcome to my profile</strog></h1>
     <img src="./images/Wel.JPG" alt="Profile" width="900" height="400">
     <h3>Group member</h3>
     <ol>
@@ -17,15 +17,15 @@
         <li><a href="#">member</a></li>
     </ol>
     <br>
-    <h2>About me </h2>
-    <img src="./images/Visa.jpg" alt="Visa">
+    <h2>About me</h2>
+    <img src="./images/Visa.jpg" alt="Visa" width="200" height="550">
     <p><b>Name: </b>America Yanakom</p>
     <p><b>Nickname: </b>Visa</p>
     <p><b>My Steam: </b><a href="https://steamcommunity.com/id/amrca/">GIZMO</a></p>
-    <p>I'm new to html but will try to learn.</p>
+    <p><small>'m new to html but will try to learn.</small></p>
     <br>
     <h2>Favourite</h2>
-    <p>I love <b>GIZMO</b>. GIZMO is a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlin</a> movie character.</p>
+    <p>I love <b>GIZMO</b>. <ins>GIZMO</ins> is a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlin</a> movie character.</p>
     <img src="./images/Gizmo.gif" alt="GIZMOart">
     <br>
     <img src="./images/Gizmo_Background.jpg" alt="GIZMOart">
@@ -40,7 +40,7 @@
         <li>Apex Legends</li>
         <li>Fortnite</li>
     </ul>
-    <p>When I'm with friends be like:</p>
+    <p><em>When I'm with friends be like:</em></p>
     <img src="https://i.pinimg.com/originals/1e/d9/a1/1ed9a1e15688e7142529a3256b564bae.gif" alt="Teletubbie">
 
 </body>
