--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Visa Homepage</title>
 </head>
 <body>
-    <h1><strong>Welcome to my profile</strog></h1>
+    <h1>Welcome to my profile</h1>
     <img src="./images/Wel.JPG" alt="Profile" width="900" height="400">
     <h3>Group member</h3>
     <ol>
@@ -18,11 +18,11 @@
     </ol>
     <br>
     <h2>About me</h2>
-    <img src="./images/Visa.jpg" alt="Visa" width="200" height="450">
+    <img src="./images/Visa.jpg" alt="Visa" width="200" height="350">
     <p><b>Name: </b>America Yanakom</p>
     <p><b>Nickname: </b>Visa</p>
     <p><b>My Steam: </b><a href="https://steamcommunity.com/id/amrca/">GIZMO</a></p>
-    <p><small>'m new to html but will try to learn.</small></p>
+    <p><small>I'm new to html but will try to learn.</small></p>
     <br>
     <h2>Favourite</h2>
     <p>I love <b>GIZMO</b>. <ins>GIZMO</ins> is a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlin</a> movie character.</p>
@@ -31,7 +31,7 @@
     <img src="./images/Gizmo_Background.jpg" alt="GIZMOart">
     <br>
     <h2>Hobby</h2>
-    <p>I love to play online games with my friends.</p>
+    <p><strong>I love to play online games with my friends.</strong></p>
     <ul>
         <li>Dota2</li>
         <li>Counter-Strike: Global Offensive</li>
