--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <p><small>I'm new to html but will try to learn.</small></p>
     <br>
     <h2>Favourite</h2>
-    <p>I love <b>GIZMO</b>. <ins>GIZMO</ins> is a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlin</a> movie character.</p>
+    <p>I love <b>GIZMO</b>, It's a <a href="https://en.wikipedia.org/wiki/Gremlins">Gremlins</a> movie character.</p>
     <img src="./images/Gizmo.gif" alt="GIZMOart">
     <br>
     <img src="./images/Gizmo_Background.jpg" alt="GIZMOart">
     <br>
     <h2>Hobby</h2>
-    <p><strong>I love to play online games with my friends.</strong></p>
+    <p><strong>I like to play online games with my friends.</strong></p>
     <ul>
         <li>Dota2</li>
         <li>Counter-Strike: Global Offensive</li>
@@ -40,7 +40,7 @@
         <li>Apex Legends</li>
         <li>Fortnite</li>
     </ul>
-    <p><em>When I'm with friends be like:</em></p>
+    <p><em>When I'm with my friends be like:</em></p>
     <img src="https://i.pinimg.com/originals/1e/d9/a1/1ed9a1e15688e7142529a3256b564bae.gif" alt="Teletubbie">
 
 </body>
